practice-exam-tracker-sfdx/ooo-app/main/default/objects/Topic_Covered__c/Topic_Covered__c.object-meta.xml
<CustomObject>
    <label>Topic Covered</label>
    <nameField>
        <displayFormat>CT #{0000}</displayFormat>
        <label>Covered Topic Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topics Covered</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>