practice-exam-tracker-sfdx/ooo-app/main/default/objects/Topic_Covered__c/fields/Subtopic_Covered__c.field-meta.xml
<CustomField>
    <fullName>Subtopic_Covered__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subtopic Covered</label>
    <referenceTo>Question_Subtopic__c</referenceTo>
    <relationshipLabel>Weeks Covered</relationshipLabel>
    <relationshipName>Weeks_Covered</relationshipName>
    <type>Lookup</type>
</CustomField>