practice-exam-tracker-sfdx/ooo-app/main/default/objects/Topic_Covered__c/fields/Topic_Covered__c.field-meta.xml
<CustomField>
    <fullName>Topic_Covered__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Topic Covered</label>
    <referenceTo>Question_Topic__c</referenceTo>
    <relationshipLabel>Weeks Covered</relationshipLabel>
    <relationshipName>Weeks_Covered</relationshipName>
    <type>Lookup</type>
</CustomField>