practice-exam-tracker-sfdx/ooo-app/main/default/objects/Topic_Covered__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <referenceTo>Week__c</referenceTo>
    <relationshipLabel>Topics Covered</relationshipLabel>
    <relationshipName>Topics_Covered</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>